# is-sealed-trait

./: Cargo.toml  README.md
src/: lib.rs
tests/: e2e.rs
tests/corpus/: Makefile  pub_in_priv_supertrait.rs  simple_public.json  simple_public.rs
