[package]
name = "is-sealed-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdoc-types = "0.24.0"
trustfall = "0.7.1"
trustfall-rustdoc-adapter = "28.0.0"

[dev-dependencies]
serde_json = "1.0.111"
